# OPEEngine

./: README.md
esp_idf_example/: CMakeLists.txt
esp_idf_example/components/OPEEngine/: CMakeLists.txt  DataWatch.h  OPEEngine.h  OPEEngineConfig.h  OPEEngine_freeRTOS_hook.h  OPEEngine_types.h  Subscriber.h
esp_idf_example/components/OPEEngine/callback/: CbAllocater.h  CbAllocator.h  CbHelper.h  CbWrapperDefined.h  CbWrapperGeneric.h  CbWrprDefined.h  CbWrprGeneric.h
esp_idf_example/components/OPEEngine/core/: DataWatch.h  OPEEngine.h  Subscriber.h
esp_idf_example/components/OPEEngine/pool/: CbPool.h  CbPoolManager.h  DWStkCtrlBlk.h  DataWatchStackCtrlBlock.h  SubscriberCtrlBlock.h
esp_idf_example/components/OPEEngine/pool_manager/: CbPoolManager.h  DataWatchStackCtrlBlock.h  SubscriberCtrlBlock.h
esp_idf_example/components/OPEEngine/test/: CMakeLists.txt  CallbackTests.cpp  DWStkAllocationTests.cpp  OPEEngineAllocatorTests.cpp  OPEEngineTestHelper.h  OPEEngineTestHelper.hpp  OPEEngineTestSuite.h  OPEEngineTestSuite.hpp  PoolManagerTests.cpp  SubscriberInterfaceTests.cpp
esp_idf_example/main/: CMakeLists.txt  Device.h  ExampleDataTypes.h  OPEEDevice.h  main.cpp
esp_idf_example/main/backends/: Button.cpp  Button.h  LED.cpp  LED.h  SerialService.cpp  SerialService.h
stm32_L476_example/: .mxproject  CMakeLists.txt  build.bat  stm32_L476_example.ioc
stm32_L476_example/Core/Inc/: stm32l4xx_it.h
stm32_L476_example/Core/Src/: dma.c  freertos.c  gpio.c  main.c  stm32l4xx_it.c  usart.c
stm32_L476_example/Core/app/: Device.h  ExampleDataTypes.h  SerialService.h  app_main.cpp
stm32_L476_example/Core/test/: CallbackTests.cpp  OPEEngineTestHelper.h  OPEEngineTestSuite.h  PoolManagerTests.cpp  SubscriberInterfaceTests.cpp  UnityInterface.cpp  UnitySerialService.cpp  UnitySerialService.h
stm32_L476_example/CubeMX/: Makefile
windows_demo/: ExampleDataTypes.h  FakeButton.cpp  FakeButton.h  FakeLED.h  FakeLed.cpp  FakeUART.cpp  FakeUART.h  MSVC-FreeRTOS Template 202012.00.vcxproj  MSVC-FreeRTOS Template 202012.00.vcxproj.filters  OPEEDevice.h  OPEEngine_demo.sln  main.cpp
windows_demo/MSVC-Fre.6198ade6/x64/Debug/: MSVC-FreeRTOS Template 202012.00.exe.recipe  MSVC-FreeRTOS Template 202012.00.ilk  vc143.idb
windows_demo/MSVC-Fre.6198ade6/x64/Debug/MSVC-Fre.6198ade6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MSVC-FreeRTOS Template 202012.00.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
windows_demo/OPEEngine/: CbAllocater.h  CbHelper.h  CbWrapperDefined.h  CbWrapperGeneric.h  DataWatch.h  OPEEngineConfig.h
windows_demo/OPEEngine_demo/x64/Debug/: OPEEngine_demo.exe.recipe
